[gd_scene load_steps=5 format=3 uid="uid://br4at54e3ye3v"]

[ext_resource type="Script" path="res://Cards/playcard_template.gd" id="1_v0m80"]
[ext_resource type="Texture2D" uid="uid://dnbgwbfqnlequ" path="res://Cards/Resources/PlayerCards/Backgrounds/texture_one.png" id="2_c0tub"]
[ext_resource type="Texture2D" uid="uid://bvwwu75vr3pb6" path="res://Cards/Resources/PlayerCards/Art_Images/landscape_artbot.jpg" id="3_k8aja"]
[ext_resource type="Script" path="res://Cards/MarginColor.gd" id="4_ywdhi"]

[node name="playcard_template" type="MarginContainer"]
custom_minimum_size = Vector2(200, 280)
anchors_preset = -1
anchor_right = 0.109
anchor_bottom = 0.278
offset_right = 0.719986
offset_bottom = -0.240021
mouse_filter = 0
script = ExtResource("1_v0m80")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
self_modulate = Color(0.14902, 0.14902, 0.14902, 1)
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_c0tub")
expand_mode = 2

[node name="CardName" type="RichTextLabel" parent="MarginContainer/VBoxContainer/TextureRect"]
unique_name_in_owner = true
modulate = Color(1, 0, 0, 1)
layout_mode = 2
offset_top = -3.0
offset_right = 200.0
offset_bottom = 20.0
mouse_filter = 2
text = "Card Name"
fit_content = true

[node name="EnergyCost" type="RichTextLabel" parent="MarginContainer/VBoxContainer/TextureRect"]
unique_name_in_owner = true
modulate = Color(1, 0, 0, 1)
layout_mode = 2
offset_left = 184.0
offset_top = -2.0
offset_right = 384.0
offset_bottom = 21.0
mouse_filter = 2
text = "2"
fit_content = true

[node name="ArtImage" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2
texture = ExtResource("3_k8aja")
expand_mode = 2

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer"]
self_modulate = Color(0.14902, 0.14902, 0.14902, 1)
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_c0tub")
expand_mode = 2

[node name="CardTypes" type="RichTextLabel" parent="MarginContainer/VBoxContainer/TextureRect2"]
unique_name_in_owner = true
modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 14
theme_override_font_sizes/bold_font_size = 0
theme_override_font_sizes/italics_font_size = 0
theme_override_font_sizes/bold_italics_font_size = 0
theme_override_font_sizes/mono_font_size = 0
text = "Physical, Water"
fit_content = true

[node name="DescriptionArea" type="ColorRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="DescriptionText" type="RichTextLabel" parent="MarginContainer/VBoxContainer/DescriptionArea"]
unique_name_in_owner = true
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_top = 5.0
offset_right = 200.0
offset_bottom = 115.0
mouse_filter = 2
text = "Card description is here"
fit_content = true
scroll_active = false

[node name="MarginColor" type="ColorRect" parent="."]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 2
mouse_filter = 2
color = Color(0.454902, 0.662745, 0.662745, 1)
script = ExtResource("4_ywdhi")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
